fix search bar visibility issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -78,6 +78,24 @@
         @apply opacity-100 pointer-events-auto;
     }
 
+    /* search bar styles */
+    .search-box {
+        @apply transition-all ease-in-out duration-300;
+    }
+
+    .search-box.show {
+        @apply  w-full z-20;
+    }
+
+    .search-overlay {
+        @apply hidden;
+    }
+
+    .search-overlay.show {
+        @apply block fixed top-0 left-0 w-full h-full bg-black bg-opacity-50 z-10;
+    }
+    /* //////// */
+
     .sidebar-link{
         @apply flex gap-4 items-center py-5 text-dark-grey hover:text-black;
     }
